<?xml version="1.0" encoding="utf-8"?>

<!--source: https://developer.android.com/develop/ui/views/layout/relative -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shade_black_1"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/idEditSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:hint="Search Crypto"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/idEditSearch"
        android:id="@+id/idRVPriceCource"
        />

    <!--        this aligns the progressbar in the center 33-->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idLoadingBar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

</RelativeLayout>